# 5th-order-polynomial-2D-trajctory

./: CMakeLists.txt  README.md
include/: class_one_dimen_poly.h  class_two_dimen_poly.h
src/: class_one_dimen_poly.cpp  class_two_dimen_poly.cpp  main.cpp
